[gd_scene load_steps=16 format=3 uid="uid://cqha4ewy1pm1"]

[ext_resource type="Texture2D" uid="uid://bi45cps5anwjm" path="res://Boutons/paint_square_off.png" id="1_as0my"]
[ext_resource type="Script" uid="uid://ctgmug1d54ihx" path="res://boutons_complexes.gd" id="1_dvptg"]
[ext_resource type="Texture2D" uid="uid://b5oni0adv5pm0" path="res://Boutons/paint_letters_off.png" id="3_jcws6"]
[ext_resource type="Texture2D" uid="uid://bclhu3ane7q46" path="res://Boutons/change_text_off.png" id="5_jcws6"]
[ext_resource type="Texture2D" uid="uid://d2ekxcb6jjavd" path="res://Boutons/change_text_on.png" id="6_dvptg"]
[ext_resource type="Texture2D" uid="uid://dcey2sh1v00lh" path="res://Boutons/ps_and_pl_off.png" id="7_khtps"]
[ext_resource type="Texture2D" uid="uid://jhrr2mavxogs" path="res://Boutons/paint_letters_on.png" id="7_o52ug"]
[ext_resource type="Texture2D" uid="uid://cxeq5cc0hcjcc" path="res://Boutons/ct_and_pl_on.png" id="8_0e8c7"]
[ext_resource type="Texture2D" uid="uid://qu6y8ikesi4y" path="res://Boutons/paint_square_on.png" id="9_a7ba8"]
[ext_resource type="Texture2D" uid="uid://c7ndhu40qtdox" path="res://Boutons/ct_and_pl_off.png" id="9_offwu"]
[ext_resource type="Texture2D" uid="uid://c1jv0q8cfuwei" path="res://Boutons/ct_and_ps_on.png" id="10_mn83r"]
[ext_resource type="Texture2D" uid="uid://citvuc8qscsos" path="res://Boutons/ct_and_ps_off.png" id="11_5yw3f"]
[ext_resource type="Texture2D" uid="uid://cm6wwn1oh266e" path="res://Boutons/ps_and_pl_on.png" id="12_khtps"]
[ext_resource type="Texture2D" uid="uid://gji7m3h1m5kr" path="res://Boutons/all_off.png" id="13_w466f"]
[ext_resource type="Texture2D" uid="uid://cs44526jqtfy7" path="res://Boutons/all_on.png" id="14_bpt73"]

[node name="BoutonsComplexes" type="Node2D"]
texture_filter = 1
scale = Vector2(0.2, 0.2)
script = ExtResource("1_dvptg")

[node name="PaintLetters" type="TextureButton" parent="."]
offset_right = 500.0
offset_bottom = 500.0
toggle_mode = true
texture_normal = ExtResource("3_jcws6")
texture_pressed = ExtResource("7_o52ug")
texture_disabled = ExtResource("7_o52ug")

[node name="PaintSquare" type="TextureButton" parent="."]
offset_right = 500.0
offset_bottom = 500.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("1_as0my")
texture_pressed = ExtResource("9_a7ba8")
texture_disabled = ExtResource("9_a7ba8")

[node name="ChangeText" type="TextureButton" parent="."]
offset_right = 500.0
offset_bottom = 500.0
toggle_mode = true
texture_normal = ExtResource("5_jcws6")
texture_pressed = ExtResource("6_dvptg")
texture_disabled = ExtResource("6_dvptg")

[node name="CTandPL" type="TextureButton" parent="."]
offset_right = 500.0
offset_bottom = 500.0
toggle_mode = true
texture_normal = ExtResource("9_offwu")
texture_pressed = ExtResource("8_0e8c7")
texture_disabled = ExtResource("8_0e8c7")

[node name="CTandPS" type="TextureButton" parent="."]
offset_right = 500.0
offset_bottom = 500.0
toggle_mode = true
texture_normal = ExtResource("11_5yw3f")
texture_pressed = ExtResource("10_mn83r")
texture_disabled = ExtResource("10_mn83r")

[node name="PSandPL" type="TextureButton" parent="."]
offset_right = 500.0
offset_bottom = 500.0
toggle_mode = true
texture_normal = ExtResource("7_khtps")
texture_pressed = ExtResource("12_khtps")
texture_disabled = ExtResource("12_khtps")

[node name="AllButton" type="TextureButton" parent="."]
offset_right = 500.0
offset_bottom = 500.0
toggle_mode = true
texture_normal = ExtResource("13_w466f")
texture_pressed = ExtResource("14_bpt73")
texture_disabled = ExtResource("14_bpt73")

[connection signal="pressed" from="PaintLetters" to="." method="_on_paint_letters_pressed"]
[connection signal="pressed" from="PaintSquare" to="." method="_on_paint_square_pressed"]
[connection signal="pressed" from="ChangeText" to="." method="_on_change_text_pressed"]
[connection signal="pressed" from="CTandPL" to="." method="_on_c_tand_pl_pressed"]
[connection signal="pressed" from="CTandPS" to="." method="_on_c_tand_ps_pressed"]
[connection signal="pressed" from="PSandPL" to="." method="_on_p_sand_pl_pressed"]
[connection signal="pressed" from="AllButton" to="." method="_on_all_button_pressed"]
